--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,9 +3,6 @@
   line-height: 1.5;
   font-weight: 400;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -28,6 +25,8 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+	background: linear-gradient(#c7a96e, #57779d);
+
 }
 
 h1 {
