--- a/src/index.css
+++ b/src/index.css
@@ -21,6 +21,7 @@ body {
   display: flex;
   place-items: center;
   min-width: 320px;
+  height: min-content;
   min-height: 100vh;
 	background: linear-gradient(#c7a96e, #57779d);
 
