--- a/src/index.css
+++ b/src/index.css
@@ -27,6 +27,26 @@ body {
 
 }
 
+.loader-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  width: 100%;
 
+}
 
-
+.loader {
+  width: 90px;
+  height: 14px;
+  --c:#fff 92%,#0000;
+  background: 
+    radial-gradient(circle 7px at bottom,var(--c)) 0 0,
+    radial-gradient(circle 7px at top   ,var(--c)) 0 100%;
+  background-size: calc(100%/4) 50%;
+  background-repeat: repeat-x;
+  animation: l11 1s infinite;
+}
+@keyframes l11 {
+    80%, 100% {background-position: calc(100%/3) 0,calc(100%/-3) 100%}
+}
